unpackaged/main/default/objects/Contract/fields/Amendment_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Quoted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Quoted</label>
    <type>Checkbox</type>
</CustomField>