unpackaged/main/default/objects/Contract/fields/Bill_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>