unpackaged/main/default/objects/Contract/fields/Contract_Minimum_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Minimum_Term__c</fullName>
    <label>Contract Minimum Term</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>