unpackaged/main/default/objects/Contract/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <label>Document#</label>
    <length>30</length>
    <type>Text</type>
</CustomField>