unpackaged/main/default/objects/Contract/fields/DPSA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>DPSA_End_Date__c</fullName>
    <label>DPSA End Date</label>
    <type>Date</type>
</CustomField>