unpackaged/main/default/objects/Contract/fields/DPSA_Fixed_Contract_Discount__c.field-meta.xml
<CustomField>
    <fullName>DPSA_Fixed_Contract_Discount__c</fullName>
    <description>Accept the discount % in the DPSA Contract Pagelayout. Will be used during Renewal</description>
    <label>DPSA Uplift %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>