unpackaged/main/default/objects/Contract/fields/DPSA_Tier_Contract_Discount__c.field-meta.xml
<CustomField>
    <fullName>DPSA_Tier_Contract_Discount__c</fullName>
    <description>Will be used to calculate the Discounted Price for different range</description>
    <label>DPSA Tier Contract Discount %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>