unpackaged/main/default/objects/Contract/recordTypes/Contract_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Contract_Record_Type</fullName>
    <active>true</active>
    <label>Contract Record Type</label>
</RecordType>